# TextAI

./: .gitignore  CONTRIBUTING.md  README.md  en_fr_preprocessing.ipynb  environment.yml  nmt_transformer.ipynb  pyproject.toml  seq2seq_transformer.ipynb  train_transformer.py
.ipynb_checkpoints/: en_fr_preprocessing-checkpoint.ipynb  seq2seq_transformer-checkpoint.ipynb
config/: bert.yml  preprocessing.ini  preprocessing.yaml  preprocessing.yml  transformer.ini  transformer.yaml  transformer.yml  transformer_config.ini
helpers/: ___init__.py  nmt.py  spickle.py  text.py
models/: transformer.py
nn/: __init__.py  linear.py  norm.py  transformers.py
pipelines/: preprocessing.py
scripts/: nmt_transformer.py  train_transformer.py
spax/helpers/: text.py
spax/nn/: transformers.py  utils.py
spaxnmt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tai/models/: bert.py  transformer.py
tai/scripts/: preprocessing.py  train_transformer.py
tai/utils/: __init__.py  checkpoint.py  data.py  metrics.py  optim.py  wandb.py
test/models/: transformer.py
textai/helpers/: nmt.py  text.py
textai/models/: transformer.py
textai/pipelines/: __init__.py  batch.py  preprocessing.py
textai/scripts/: preprocessing.py  train_transformer.py
wandb/run-20231227_135740-jua11bll/files/: config.yaml  requirements.txt  wandb-metadata.json
