[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tai" 
dynamic = ["version"]
description = "Text AI: Deep Neural Network Architectures for Text Based Tasks"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.5",
    "numpy>=1.26.0",
    "optax>=0.1.8",
    "wandb>=0.16.1",
    "tensorflow>=2.12.0",
    "sentencepiece>=0.1.99",
    "orbax>=0.1.9",
    "clu @ git+https://github.com/google/CommonLoopUtils"
]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = { "tai" = "tai" }

[project.optional-dependencies]
dev = [
    "black>=21.6b0",
    "isort>=5.9.2",
    "pytest>=7.4.4",
]